# ehijing

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
config/experiments/: hadronization.setting  hermes.setting
config/experiments/dis_cuts/: hermes.setting
docs/: mainpage.md
eHIJING-examples/: CMakeLists.txt  ehijing-space-time-position.cpp  run_eKr.sh
eHIJING-examples/Script/: Get_two_particle_ecc_WY.cpp
include/: cli.hpp  dis_kinematics.hpp  ehijing_constants.hpp  event_output.hpp  filesystem_utils.hpp  hadronizer.hpp  modified_ff.hpp
scripts/: run_ed.sh
src/: cli.cpp  dis_kinematics.cpp  eHIJING.cc  event_output.cpp  filesystem_utils.cpp  hadronizer.cpp  main.cpp  modified_ff.cpp
